# fsmEngine

./: .gitmodules  CMakeLists.txt  Makefile  README.md  genFSM.py
example/: CMakeLists.txt  example.sm  main.c
example/inc/: example_sm.h
example/src/: example_sm.c  example_sm_private.h
inc/: fsm.h
src/: fsm.c
templates/: sm.c  sm.h  sm_private.h
test/: CMakeLists.txt  fsm_test.c
